--- a/index.html
+++ b/index.html
@@ -26,10 +26,6 @@
             font-size: 20px;
             font-weight: bold;
         }
-        #link {
-            margin-top: 10px;
-            display: none;
-        }
     </style>
 </head>
 <body>
@@ -44,7 +40,6 @@
     <input type="number" id="months" placeholder="예: 120"><br>
     <button onclick="calculate()">계산하기</button>
     <div id="result"></div>
-    <a id="link" href="https://smartstore.naver.com/powertoolkorea/products/8710661733?nl-query=3M+%ED%8A%B9%EA%B8%89+1%EA%B8%89+%EB%B0%A9%EC%A7%84%EB%A7%88%EC%8A%A4%ED%81%AC+%EC%82%B0%EC%97%85%EC%9A%A9%EB%A7%88%EC%8A%A4%ED%81%AC&nl-ts-pid=iJmn0dqVN8CssOw4f8Cssssss0o-471971&NaPm=ct%3Dm7elv2xk%7Cci%3Dc4c40ab535a528d5951c7386634fdb2e8c020d89%7Ctr%3Dsls%7Csn%3D4139928%7Chk%3Db00168be44a6cb9c3fe270754ce574a0e48814a3" target="_blank">관련 상품 보기</a>
 
     <script>
         function calculate() {
@@ -59,7 +54,7 @@
             }
             
             document.getElementById("result").innerText = `최종 금액: ₩${finalAmount.toLocaleString()}`;
-            document.getElementById("link").style.display = "block";
+            window.open("https://smartstore.naver.com/powertoolkorea/products/8710661733?nl-query=3M+%ED%8A%B9%EA%B8%89+1%EA%B8%89+%EB%B0%A9%EC%A7%84%EB%A7%88%EC%8A%A4%ED%81%AC+%EC%82%B0%EC%97%85%EC%9A%A9%EB%A7%88%EC%8A%A4%ED%81%AC&nl-ts-pid=iJmn0dqVN8CssOw4f8Cssssss0o-471971&NaPm=ct%3Dm7elv2xk%7Cci%3Dc4c40ab535a528d5951c7386634fdb2e8c020d89%7Ctr%3Dsls%7Csn%3D4139928%7Chk%3Db00168be44a6cb9c3fe270754ce574a0e48814a3", "_blank");
         }
     </script>
 </body>
